# ForgePress

./: #2Postgres.sh  .env  .gitignore  Cargo.toml  Development.md  compile.sh  dev.ps1  dev.sh  instructions.md  plan.md  readme.md
admin-dashboard/: index.html  package-lock.json  package.json  vite.config.js
admin-dashboard/src/: App.svelte  main.js
admin-dashboard/src/components/: BlockEditor.svelte  Login.svelte  PageList.svelte  Sidebar.svelte
content/: forgepress.db
content/languages/: en.json
content/themes/default/templates/: 404.html  single.html
content/themes/default/templates/blocks/: accordion.html  accordion.json  alert_banner.html  alert_banner.json  blockquote.html  blockquote.json  button.html  button.json  contact_form.html  contact_form.json  divider.html  divider.json  feature_card.html  feature_card.json  google_map.html  google_map.json  heading.html  heading.json  hero_section.html  hero_section.json  image.html  image.json  pricing_card.html  pricing_card.json  rich_text.html  rich_text.json  section_container.html  section_container.json  social_links.html  social_links.json  spacer.html  spacer.json  two_columns.html  two_columns.json  video.html  video.json
content/themes/default/templates/layouts/: base.html  footer.html  header.html
content/uploads/: sitemap.xml
dev/: structure.sh
forgepress-cli/: Cargo.toml  usage.md
forgepress-cli/src/: main.rs
forgepress-core/: Cargo.toml
forgepress-core/src/: app_state.rs  config.rs  error.rs  main.rs
forgepress-core/src/auth/: middleware.rs  mod.rs  passwords.rs  roles.rs
forgepress-core/src/cache/: invalidator.rs  mod.rs  moka_cache.rs
forgepress-core/src/database/: connection.rs  mod.rs  options.rs  pages.rs  taxonomies.rs  users.rs
forgepress-core/src/domain/: mod.rs  page.rs  taxonomy.rs  user.rs
forgepress-core/src/i18n/: loader.rs  mod.rs  verification.md
forgepress-core/src/jobs/: mod.rs  scheduler.rs
forgepress-core/src/media/: mod.rs  optimizer.rs  upload.rs
forgepress-core/src/plugin_engine/: mod.rs  rhai_host.rs  wasm_host.rs
forgepress-core/src/routing/: mod.rs  webhooks.rs
forgepress-core/src/routing/admin_api/: auth.rs  media.rs  mod.rs  pages.rs
forgepress-core/src/routing/public/: mod.rs  permalinks.rs  renderer.rs
forgepress-core/src/template_engine/: filters.rs  mod.rs
forgepress-plugin-sdk/: Cargo.toml
forgepress-plugin-sdk/src/: lib.rs
migrations/postgres/: 0001_create_users_table.sql  0002_create_pages_table.sql  0003_create_taxonomies_table.sql  0004_create_options_table.sql
migrations/sqlite/: 0001_create_users_table.sql  0002_create_pages_table.sql  0003_create_taxonomies_table.sql  0004_create_options_table.sql
