# /Cargo.toml
[workspace]
resolver = "2"
members = [
    "forgepress-core",
    "forgepress-plugin-sdk",
    "forgepress-cli"
]

# Centralized dependency management inherited by workspace crates
[workspace.dependencies]
# Web & Async
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Serialization & Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
config = { version = "0.14" }

# Database & ORM
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono", "json"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Security
argon2 = { version = "0.5" }
jsonwebtoken = { version = "9.3" }

# Extensibility & Templating
minijinja = { version = "2.0", features = ["loader", "json"] }
rhai = { version = "1.18", features = ["serde"] }
wasmtime = { version = "20.0" }

# Utilities
image = { version = "0.25" }
moka = { version = "0.12", features = ["future"] }
anyhow = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }