# /Cargo.toml
[workspace]
resolver = "2"
members = [
    "forgepress-core",
    "forgepress-plugin-sdk",
    "forgepress-cli"
]

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
config = { version = "0.14" }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono", "json"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = { version = "0.5" }
jsonwebtoken = { version = "9.3" }
minijinja = { version = "2.0", features = ["loader", "json"] }
rhai = { version = "1.18", features = ["serde"] }
wasmtime = { version = "20.0" }
image = { version = "0.25" }
moka = { version = "0.12", features = ["future"] }
anyhow = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
dotenvy = { version = "0.15" }
toml = { version = "0.8" } # Added to workspace dependencies