# /forgepress-cli/Cargo.toml
[package]
name = "forgepress-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Inherited workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
anyhow = { workspace = true }

# CLI Specific dependencies
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = { version = "0.15" }